--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
+
 # Global API
 PORT=3000
 TIMEZONE=America/Mexico_City
@@ -23,8 +24,16 @@ SAP_PASSWORD=<SAP_PASSWORD>
 # Configuration for Mail and Docs SAP SL B1
 API_BASE_URL=http://localhost:4000/
 
+# JWT Configuration
+JWT_SECRET=<YOUR_JWT_SECRET>
+JWT_EXPIRES_IN=2h
+
+# Automatizaciones Email y Teams
+Power_Automate_Url="<YOUR_POWER_AUTOMATE_URL>"
+Power_Automate_Url_Teams="<YOUR_POWER_AUTOMATE_TEAMS_URL>"
+
 # DB Connection
 DB_ROOT_PASSWORD=<DB_ROOT_PASSWORD>
-DB_NAME=intranet_db
+DB_NAME=travel_db
 
-DATABASE_URL="mysql://<DB_USER>:<DB_PASSWORD>@localhost:3306/intranet_db"
+DATABASE_URL="mysql://<DB_USER>:<DB_PASSWORD>@localhost:3306/travel_db"
